# fyp

./: .gitignore  README.md  fyp.md  main.py  pyproject.toml
demos/: full_pipeline_demo.py  heat_diffusion_demo.py  motion_tracking_demo.py
generation/: generate.py
pdr/: dataset.py  google_colab.ipynb  infer.py  infer_log.txt  model.py  smoke_log.txt  train.py
pose/: benchmark.py  common.py  diag.py  diag2.py  pose_cnn.py  pose_essential.py  pose_homography.py  pose_pnp.py  pose_slam.py  train_cnn.py  train_log.txt
pose/checkpoints/: pose_cnn.pt
pose/output/: benchmark.csv
tests/: conftest.py  test_dot_tracker.py  test_generation.py  test_heat_diffusion.py  test_integration.py  test_pattern_projection.py  test_pdr.py  test_pose.py  test_pose_estimation.py  test_scene.py  test_track.py  test_visualization.py
thermal_tracker/: __init__.py  dot_tracker.py  heat_diffusion.py  pattern_projection.py  pose_estimation.py  scene.py  visualization.py
track/: benchmark.py  common.py  track_blob.py  track_dense_flow.py  track_framediff.py  track_lk.py  track_orb.py
track/output/: benchmark.csv  benchmark_log.txt
