[project]
name = "thermal-tracker"
version = "0.1.0"
description = "Infrastructure-free AR headset tracking using thermal sensors"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "opencv-contrib-python>=4.9",
    "torch>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
thermal-demo = "demos.full_pipeline_demo:run_demo"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
